# MeshOpt

./: CMakeLists.txt  README.txt
BL/: BLMesh.cpp  BLMesh.h  BoundaryLayer.cpp  BoundaryLayer.cpp.backup  BoundaryLayer.h  BoundaryLayerSubdivider.cpp  DefaultNodeSpacingEvaluator.cpp  OptimizeBL.cpp
Common/: BLParameterList.cpp  BLParameterList.h  CaseParameterList.cpp  CaseParameterList.h  HModel.cpp  HModel.h  HighOrderParameterList.cpp  HighOrderParameterList.h  main.cpp
Demo/: MeshOpt.config  script_MeshOpt.sh
Demo/SymmetricSphere/: MeshOpt.config  meshopt.msh
Demo/Wing/: MeshOpt.config  SD7003Rectangular.geo
Demo/rae2822Airfoil/: MeshOpt.config  rae2822.geo  rae2822.msh
Demo/temp/: MeshOpt.config
FiniteElement/: CMakeLists.txt
FiniteElement/InterpolationPoints/: CMakeLists.txt  InterpolationPoints.cpp  InterpolationPoints.h  RefinedInterpolation.cpp  RefinedInterpolation.h
FiniteElement/Polynomials/: JacobiPolynomials.cpp  JacobiPolynomials.h  PolynomialBasis.cpp
FiniteElement/Quadrature/: Quadrature.cpp
FiniteElement/ShapeFunctions/: NodeIndexer.cpp  NodeIndexer.h  ShapeFunction.h  ShapeFunctionFactory.h
Geometry/: CMakeLists.txt
HighOrder/: HighOrderMeshGenerator.cpp  HighOrderMeshGeneratorAndOptimizer.cpp
Mesh/: CMakeLists.txt
Mesh/Elements/: ActiveMEl.cpp  CMakeLists.txt  CompEl.cpp  El1D.cpp  El2D.cpp  ElementAnalyzer.cpp  Mel.cpp  Mel.h  OptEl.cpp  OptEl.h  OptElDev.cpp  OptElManager.cpp  OptElManager.h
Mesh/IO/: GMSHReader.cpp  GMSHWriter.cpp  GeometryReader.cpp  MeshReader.h
Mesh/Nodes/: MNode.cpp  Mnode.h
Mesh/Src/: CMakeLists.txt  HDGMesh.cpp  MeshContainer.h  ParametricCoordinateEvaluator.cpp  getMeshConnectivity.cpp
MeshOptimization/: CMakeLists.txt  IdealElement.cpp  IdealElement.h  LocalMeshMeritEvaluator.cpp  LocalMeshMeritEvaluator.h  MeshOptimizer.cpp  MeshOptimizer.h  NewMeshOptimizer.cpp  NewMeshOptimizer.h  PlotOptimizationProgress.cpp  PlotOptimizationProgress.h  SubmeshMeritEvaluator.cpp  SubmeshMeritEvaluator.h  SubmeshMeritEvaluator2.cpp  SubmeshMeritEvaluator2.h  SubmeshOptimizer.cpp  SubmeshOptimizer.h
Optimization/: CMakeLists.txt  DenseNewtonOptimizer.cpp  DenseNewtonOptimizer.h  LBFGSOptimizer.cpp  LBFGSOptimizer.h  MeritEvaluator.h  MeshOptimizer.cpp  MeshOptimizer.h  NewtonOptimizer.cpp  NewtonOptimizer.h  Optimizer.h  SubmeshOptimizer.cpp
ParameterList/: CMakeLists.txt
ParameterList/Utility/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  MyParameterList.cpp  MyParameterList.h
